--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "discord.js": "^14.18.0",
+    "dotenv": "^16.5.0",
     "firebase-admin": "^13.3.0",
-    "noblox.js": "^6.1.1"
+    "noblox.js": "^6.1.1",
+    "node.js": "^0.0.1-security"
   }
 }
