--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
     "firebase-admin": "^13.3.0",
